# getting-started

./: .gitignore  .gitmodules  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
samples/0-Hello-World/: CMakeLists.txt  build.yaml  main.c  manifest.yaml  ocre_api.h
samples/1-blinky/: CMakeLists.txt  build.yaml  main.c  manifest.yaml  ocre_api.c  ocre_api.h
samples/2-sensors/: CMakeLists.txt  build.yaml  main.c  manifest.yaml  ocre_api.h
samples/3-publisher/: CMakeLists.txt  build.yaml  main.c  manifest.yaml
samples/4-subscriber/: CMakeLists.txt  build.yaml  main.c  manifest.yaml
samples/blinky/: CMakeLists.txt  README.md  blinky.ati  build.yaml  main.c  manifest.yaml  ocre_api.h
samples/blinky-button/: CMakeLists.txt  build.yaml  main.c  manifest.yaml  ocre_api.h
samples/blinky-xmas/: CMakeLists.txt  build.yaml  main.c  ocre_api.h
samples/echo-server/: CMakeLists.txt  build.yaml
samples/echo-server/src/: main.c
samples/hello-world/: CMakeLists.txt  README.md  build.yaml  main.c  manifest.yaml
samples/ocre_api/: ocre_api.c  ocre_api.h
samples/temperature/: CMakeLists.txt  README.md  analytics_service.c  analytics_service.env  manifest.yaml  mqtt_service.c  mqtt_service.env  sensor_service.c  sensor_service.env
samples/webserver/: CMakeLists.txt  README.md  build.yaml  main.c
samples/webserver/src/: inet_addr_shim.c  inet_addr_shim.h  main.c  mongoose.c  mongoose_config.h  wasi_socket_ext.c  wasi_socket_ext.h
